# fastchain

./: .gitignore  README.md  pyproject.toml
config/: settings.toml
fastchain/: cli.py  main.py
fastchain/core/config/: __init__.py  constants.py  enums.py  local_settings.py  path_settings.py  runtime_store.py  settings_manager.py
fastchain/core/db/mongo/: __init__.py  config.py  manager.py  registry.py
fastchain/core/db/redis/: __init__.py  config.py  manager.py
fastchain/core/db/relational/: __init__.py  config.py  manager.py  models.py
fastchain/core/listeners/: audit.py
fastchain/core/llm/: manager.py  service.py  types.py
fastchain/core/llm/base/: callback.py  config.py
fastchain/core/llm/drivers/: china_unicom.py  openai.py
fastchain/core/llm/prompts/: manager.py  schema.py
fastchain/core/llm/utils/: parsers.py
fastchain/core/logging/: __init__.py  logger.py
fastchain/core/monitor/: metrics.py
fastchain/core/resources/: __init__.py  apollo.py  base.py  events.py  limits.py  watcher.py
fastchain/core/scheduler/: decorators.py  manager.py  types.py
fastchain/core/server/: app.py  bootstrap.py  middleware.py  wiring.py
fastchain/core/tracing/: context.py
fastchain/jobs/: sample.py
fastchain/templates/: env  project_api_health.py  project_api_init.py  project_app_init.py  project_pyproject.toml  project_resources_init.py  settings.toml
fastchain/templates/apollo/: README.md  llm.models.json  prompts.coding_master.yaml  prompts.default_extraction.yaml  prompts.translator.yaml  system.config.cucc.json  system.config.minimal.json
(+3 files in other folders)
